[gd_scene load_steps=3 format=3 uid="uid://boqpxo1diy8sm"]

[ext_resource type="Script" path="res://Menus/MapButton.gd" id="1_2dxni"]
[ext_resource type="Texture2D" uid="uid://ubii2h816tue" path="res://Maps/Map 1/Map1.PNG" id="1_5unlu"]

[node name="MapButton" type="Button"]
offset_right = 858.0
offset_bottom = 516.0
scale = Vector2(0.33, 0.359999)
icon = ExtResource("1_5unlu")
script = ExtResource("1_2dxni")
map_path = "res://Maps/Map 1/Map1.tscn"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
